welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:24: error: not found: value RED
	faireC1(RED)
                ^